@@ -1,6 +1,10 @@
 package org.turtleshop.api.modules.auth.service;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
@@ -28,11 +32,28 @@ public class CustomerService {
         return mapToResponse(customer);
     }
 
-    // Get all Customers
+    // Get Customers paginated
+    public Page<CustomerResponse> getCustomersPage(int page, int size) {
+        int safePage = Math.max(page, 0);
+
+        // Minimum size = 1, maximum size = 100
+        int safeSize = Math.min(Math.max(size, 1), 100);
+
+        Pageable pageable = PageRequest.of(
+                safePage,
+                safeSize,
+                Sort.by("createdAt").descending()
+        );
+
+        return customerAccess.getPage(pageable)
+                .map(this::mapToResponse);
+    }
+
+    // Optional: but dangerous cuz returns all 100000 customers
     public List<CustomerResponse> getAllCustomers() {
         return customerAccess.getAll().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // HELPER: Maps the Model to the Response DTO
